--- a/app/views/generated_queries/index.html.erb
+++ b/app/views/generated_queries/index.html.erb
@@ -1,29 +1,1 @@
-<div id="canvas"></div>
-
-<script type="text/javascript">
-  var g = new Graph();
-
-
-
-  <% @dh.linkages.nodes.each do |node| %>
-  g.addNode("<%= node.klass %>");
-    <% node.edges.each do |end_point, options| %>
-  g.addEdge("<%= node.klass %>", "<%= end_point %>", {directed: true, label: "<%= options[:name] %>"});
-    <% end %>
-  <% end %>
-
-
-  /* layout the graph using the Spring layout implementation */
-  var layouter = new Graph.Layout.Spring(g);
-
-  /* draw the graph using the RaphaelJS draw implementation */
-  var renderer = new Graph.Renderer.Raphael('canvas', g, 1500, 750);
-
-  var redraw = function() {
-    layouter.layout();
-    renderer.draw();
-  };
-
-</script>
-
-<button onclick="redraw()">Redraw!</button>
+<h2>Generated Queries</h2>
