started wizard, started own version of liteaccordion

--- a/app/stylesheets/query_generator/query_generator.scss
+++ b/app/stylesheets/query_generator/query_generator.scss
@@ -17,7 +17,7 @@
 
       td {
         border-bottom: 1px solid #CCCCCC;
-        padding: 6px 8px;
+        padding: 4px 6px;
       }
     }
 
@@ -33,6 +33,7 @@
     &.records {
       margin-left: auto;
       margin-right: auto;
+      font-size: 12pt;
       td {
         &.boolean {
           text-align: center;
