Several fixes in liteAccordion, finished first wizard step, second wizard step almost finished (eye candy)

--- a/app/stylesheets/query_generator/_lite_accordion.scss
+++ b/app/stylesheets/query_generator/_lite_accordion.scss
@@ -58,7 +58,8 @@
   filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1);
 }
 .accordion .slide > h2:hover { cursor: pointer }
-.accordion .slide > div { height: 100%; position: absolute; top: 0; z-index: 10; overflow: hidden; background: white }
+.accordion .slide > h2.disabled {background-color: #a0a0a0;}
+.accordion .slide > div { height: 100%; position: absolute; top: 0; z-index: 10; overflow: hidden; }
 .accordion noscript p { padding: 10px; margin: 0; background: white }
 
 /****************************************** Basic */
