--- a/app/views/generated_queries/_model_node.html.haml
+++ b/app/views/generated_queries/_model_node.html.haml
@@ -1,8 +1,16 @@
 .handle.ui-corner-all.ui-widget-header
   = model.human_name
-  = link_to_remote("RP", :url => preview_model_records_generated_queries_path(:model => model.to_s), :method => :get)
+  - if model != query_generator_session.main_model
+    = link_to_remote("RP", :url => preview_model_records_generated_queries_path(:model => model.to_s), :method => :get)
 
-%ul
-  - @dh.linkage_graph.get_node(model).connected_models.each do |cm|
-    %li
-      = link_to_function cm.human_name, "queryGenerator.graph.addConnection('#{model.to_s.underscore}', '#{cm.to_s.underscore}')"
+
+%table
+  - dh.linkage_graph.get_node(model).connected_model_associations.each do |association, end_point|
+    - next unless ccan? :read, end_point
+    - next if query_generator_session.main_model == end_point || query_generator_session.models.include?(end_point)
+    = render :partial => "association_row", :locals => {:model => model, :association => association, :end_point => end_point}
+-#
+-#%ul
+-#
+-#    %li
+-#      = link_to_function cm.human_name, "queryGenerator.graph.addConnection('#{model.to_s.underscore}', '#{cm.to_s.underscore}')"
