--- a/app/views/generated_queries/new.html.haml
+++ b/app/views/generated_queries/new.html.haml
@@ -1,11 +1,20 @@
-#query-generator
+#query-generator.query-generator
   %ol
-    %li
-      %h2 Slide Numero 1
-      %div.slide-content asdf
-    %li
-      %h2 Slide Numero 2
-      %div.slide-content fdsa
+    %li{:name => "main-model"}
+      %h2
+        %span= t("query_generator.wizard.main_model.slide_caption")
+      #step1.slide-content
+        = render :partial => "main_model"
+    %li{:name => "associations"}
+      %h2
+        %span= t("query_generator.wizard.associations.slide_caption")
+      #step2.slide-content
+        = render :partial => "associations"
+    %li{:name => "values"}
+      %h2
+        %span= t("query_generator.wizard.values.slide_caption")
+      #step3.slide-content
+        asdf
 
 
   -##flash
@@ -16,13 +25,11 @@
   -#      %p= link_to_remote(model.human_name, :url => add_model_generated_queries_path(:model => model.to_s))
   -#
   -#
-  -##visualisation
-  -#  #graph.canvas
-  -#    = render :partial => "query_graph"
+
 
   / Content for the model records preview dialog
   #model-records-preview{:style => "display: none"}
 
 :javascript
   queryGenerator.init();
-  queryGenerator.setNodes(#{@dh.linkage_graph.nodes.to_json});
+  queryGenerator.setNodes(#{dh.linkage_graph.nodes.to_json});
