--- a/app/stylesheets/query_generator/query_generator.scss
+++ b/app/stylesheets/query_generator/query_generator.scss
@@ -67,12 +67,13 @@ body {
 
   #graph {
     height: 100%;
+    border-top: 1px solid black;
 
     .block {
       border: 1px solid black;
       padding: 2px;
       position: relative;
-      width: 200px;
+      min-width: 200px;
       min-height: 150px;
       background-color: white;
 
