--- a/app/views/generated_queries/new.html.haml
+++ b/app/views/generated_queries/new.html.haml
@@ -1,20 +1,21 @@
 #query-generator.query-generator
-  %ol
-    %li{:name => "main-model"}
-      %h2
-        %span= t("query_generator.wizard.main_model.slide_caption")
-      #step1.slide-content
-        = render :partial => "main_model"
-    %li{:name => "associations"}
-      %h2
-        %span= t("query_generator.wizard.associations.slide_caption")
-      #step2.slide-content
-        = render :partial => "associations"
-    %li{:name => "values"}
-      %h2
-        %span= t("query_generator.wizard.values.slide_caption")
-      #step3.slide-content
-        asdf
+  #wizard
+    %ol
+      %li{:name => "main-model"}
+        %h2
+          %span= t("query_generator.wizard.main_model.slide_caption")
+        #step1.slide-content
+          = render :partial => "main_model"
+      %li{:name => "associations"}
+        %h2
+          %span= t("query_generator.wizard.associations.slide_caption")
+        #step2.slide-content
+          = render :partial => "associations"
+      %li{:name => "values"}
+        %h2
+          %span= t("query_generator.wizard.values.slide_caption")
+        #step3.slide-content
+          asdf
 
 
   -##flash
@@ -29,6 +30,8 @@
 
   / Content for the model records preview dialog
   #model-records-preview{:style => "display: none"}
+
+  #progress= render :partial => "progress"
 
 :javascript
   queryGenerator.init();
