--- a/app/views/generated_queries/_query_graph.haml
+++ b/app/views/generated_queries/_query_graph.haml
@@ -1,3 +1,7 @@
+- if query_generator_session.main_model
+  .block.draggable.model.main-model{:id => model_dom_id(query_generator_session.main_model)}
+    = model_node(query_generator_session.main_model)
+
 - query_generator_session.models.each do |model|
-  .block.draggable.model{:id => model.to_s.underscore}
+  .block.draggable.model{:id => model_dom_id(model)}
     = model_node(model)
