--- a/app/stylesheets/query_generator/_lite_accordion.scss
+++ b/app/stylesheets/query_generator/_lite_accordion.scss
@@ -58,6 +58,7 @@
   filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1);
 }
 .accordion .slide > h2:hover { cursor: pointer }
+.accordion .slide > h2.disabled:hover { cursor: auto }
 .accordion .slide > h2.disabled {background-color: #a0a0a0;}
 .accordion .slide > div { height: 100%; position: absolute; top: 0; z-index: 10; overflow: hidden; }
 .accordion noscript p { padding: 10px; margin: 0; background: white }
