--- a/app/stylesheets/query_generator/_lite_accordion.scss
+++ b/app/stylesheets/query_generator/_lite_accordion.scss
@@ -60,7 +60,7 @@
 .accordion .slide > h2:hover { cursor: pointer }
 .accordion .slide > h2.disabled:hover { cursor: auto }
 .accordion .slide > h2.disabled {background-color: #a0a0a0;}
-.accordion .slide > div { height: 100%; position: absolute; top: 0; z-index: 10; overflow: hidden; }
+.accordion .slide > div { height: 100%; position: absolute; top: 0; z-index: 10; overflow: hidden; background-color: #fffafa; }
 .accordion noscript p { padding: 10px; margin: 0; background: white }
 
 /****************************************** Basic */
