--- a/app/views/generated_queries/_values.html.haml
+++ b/app/views/generated_queries/_values.html.haml
@@ -1,4 +1,11 @@
-= render :partial => "model_values", :collection => query_generator_session.used_models, :as => :model
+.header
+  %h2.title= t("query_generator.wizard.values.title")
+  .information= t("query_generator.wizard.values.description")
+
+.content
+  = render :partial => "model_values", :collection => query_generator_session.used_models, :as => :model
 
 .buttons
   = button_to_remote t("query_generator.wizard.values.button_prev"), :url => load_previous_wizard_step_generated_queries_path(:current => 2), :method => :get
+
+  .clear
