--- a/app/views/layouts/query_generator.html.haml
+++ b/app/views/layouts/query_generator.html.haml
@@ -14,5 +14,5 @@
 
     = javascript_include_tag "query_generator/jquery.jsPlumb-1.3.9-all-min",
                              "query_generator/query_generator", "query_generator/liteaccordion.jquery", "query_generator/overlaps.jquery"
-  %body
+  %body.query-generator-layout
     = yield
