--- a/app/views/generated_queries/wizard_2a/_model_node.html.haml
+++ b/app/views/generated_queries/wizard_2a/_model_node.html.haml
@@ -9,7 +9,7 @@
   - dh.linkage_graph.get_node(model).connected_model_associations.each do |association, target|
     - next unless ccan? :read, target
     - next if query_generator_session.uses_model?(target)
-    = render :partial => "association_row", :locals => {:model => model, :association => association, :end_point => target}
+    = render :partial => "generated_queries/wizard_2a/association_row", :locals => {:model => model, :association => association, :end_point => target}
 -#
 -#%ul
 -#
