before_create accordion branch. Will get rid of accordion but keep it for screenshots

--- a/app/stylesheets/query_generator/query_generator.scss
+++ b/app/stylesheets/query_generator/query_generator.scss
@@ -25,6 +25,11 @@ body.query-generator-layout {
         color: #262b33;
       }
 
+      &.active {
+        background-color: green;
+      }
+
+
       td {
         border-bottom: 1px solid #CCCCCC;
         padding: 4px 6px;
