--- a/app/views/generated_queries/wizard_3/_conditions.html.haml
+++ b/app/views/generated_queries/wizard_3/_conditions.html.haml
@@ -3,7 +3,14 @@
   .information= t("query_generator.wizard.conditions.description")
 
 .content
-  = render :partial => "model_conditions", :collection => query_generator_session.used_models, :as => :model
+  %table
+    %thead
+      %tr
+        - query_generator_session.used_columns.each do |qc|
+          %th
+            = qc.model.human_name
+            %br
+            = qc.column_name
 
 .buttons
   = button_to_remote t("query_generator.wizard.conditions.button_prev"), :url => load_previous_wizard_step_generated_queries_path(:current => 2), :method => :get
