--- a/app/views/generated_queries/wizard_2a/_query_graph.haml
+++ b/app/views/generated_queries/wizard_2a/_query_graph.haml
@@ -5,3 +5,5 @@
 - query_generator_session.models.each do |model|
   .block.draggable.model{:id => model_dom_id(model)}
     = model_node(model)
+
+.clear
