--- a/app/views/layouts/query_generator.html.haml
+++ b/app/views/layouts/query_generator.html.haml
@@ -6,6 +6,7 @@
     = stylesheet_link_tag "query_generator/query_generator"
     = stylesheet_link_tag "query_generator/jquery_ui_aristo"
 
+    = javascript_include_tag "application"
     = javascript_include_tag 'http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js'
     = javascript_include_tag 'http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.13/jquery-ui.min.js'
 
@@ -14,5 +15,7 @@
 
     = javascript_include_tag "query_generator/jquery.jsPlumb-1.3.9-all-min",
                              "query_generator/query_generator"
+
+    = csrf_meta_tags
   %body.query-generator-layout
     = yield
