less javascript, more rjs, better wizard process

--- a/app/views/generated_queries/wizard_2a/_footer.html.haml
+++ b/app/views/generated_queries/wizard_2a/_footer.html.haml
@@ -2,7 +2,7 @@
   = render_current_progress
 
 .buttons
-  = previous_step_button t("query_generator.wizard.associations.button_prev"), 2
-  = button_to_remote t("query_generator.wizard.associations.button_next"), :url => choose_model_columns_generated_queries_path, :method => :get
+  = button_to_remote t("query_generator.wizard.associations.button_prev"), :url => choose_main_model_generated_queries_path, :method => :get
+  = button_to_remote t("query_generator.wizard.associations.button_next"), :url => choose_model_columns_generated_queries_path(:forward => true), :method => :get
 
 .clear
