--- a/app/views/generated_queries/wizard_2b/_content.html.haml
+++ b/app/views/generated_queries/wizard_2b/_content.html.haml
@@ -1,5 +1,5 @@
 #graph
   - query_generator_session.used_models.each do |model|
-    = render_wizard_partial "2a", "model_node_wrapper", :model => model
+    = render_wizard_partial "2b", "model_node_wrapper", :model => model
 
   .clear
