--- a/app/views/generated_queries/wizard/step_2/_model_node.html.haml
+++ b/app/views/generated_queries/wizard/step_2/_model_node.html.haml
@@ -8,9 +8,4 @@
   - dh.linkage_graph.get_node(model).connected_model_associations.each do |association, target|
     - next unless ccan? :read, target
     - next if query_generator_session.uses_model?(target)
-    = render :partial => "generated_queries/wizard_2a/association_row", :locals => {:model => model, :association => association, :end_point => target}
--#
--#%ul
--#
--#    %li
--#      = link_to_function cm.human_name, "queryGenerator.graph.addConnection('#{model.to_s.underscore}', '#{cm.to_s.underscore}')"
+    = render :partial => wizard_file(2, "association_row"), :locals => {:model => model, :association => association, :end_point => target}
