--- a/app/views/generated_queries/wizard/step_4/_content.html.haml
+++ b/app/views/generated_queries/wizard/step_4/_content.html.haml
@@ -11,3 +11,4 @@
     = render_wizard_partial 4, "rows/positions"
     = render_wizard_partial 4, "rows/show"
     = render_wizard_partial 4, "rows/name"
+    = render_wizard_partial 4, "rows/order"
