create and update

--- a/app/views/generated_queries/_generated_query_row.html.haml
+++ b/app/views/generated_queries/_generated_query_row.html.haml
@@ -1,2 +1,3 @@
 %tr[generated_query]
   %td= generated_query.name
+  %td= link_to "Edit", edit_query_generator_generated_query_path(generated_query)
