--- a/app/views/generated_queries/wizard/step_5/_footer.html.haml
+++ b/app/views/generated_queries/wizard/step_5/_footer.html.haml
@@ -3,6 +3,6 @@
 
 .buttons
   = link_to t("query_generator.wizard.query.button_prev"), query_generator_generated_query_wizard_path(:wizard_step => "conditions")
-  = link_to_function t("query_generator.wizard.query.button_next"), %{jQuery("#new_query_generator_generated_query").submit()}
+  = link_to_function t("query_generator.wizard.query.button_next"), %{jQuery("#query-generator").find("form").submit()}
 
 .clear
