--- a/app/views/generated_queries/_generated_query_row.html.haml
+++ b/app/views/generated_queries/_generated_query_row.html.haml
@@ -1,3 +1,7 @@
-%tr[generated_query]
-  %td= generated_query.name
-  %td= link_to "Edit", edit_query_generator_generated_query_path(generated_query)
+- if ccan? :update, generated_query
+  %tr[generated_query]
+    %td= generated_query.name
+    %td
+      = link_to t("query_generator.misc.show"), query_generator_generated_query_path(generated_query)
+      = link_to t("query_generator.misc.edit"), edit_query_generator_generated_query_path(generated_query)
+      = link_to(t("query_generator.misc.destroy"), query_generator_generated_query_path(generated_query), :method => "delete", :confirm =>  "Really?") if ccan?(:destroy, generated_query)
