--- a/app/stylesheets/query_generator/query_generator.scss
+++ b/app/stylesheets/query_generator/query_generator.scss
@@ -47,6 +47,10 @@ body.query-generator-layout {
           text-align: center;
         }
 
+        input[type=text] {
+          width: 150px;
+        }
+
       }
     }
 
