removed class_linkage_node

--- a/app/views/query_generator/generated_queries/wizard/step_2/_model_node.html.haml
+++ b/app/views/query_generator/generated_queries/wizard/step_2/_model_node.html.haml
@@ -5,7 +5,7 @@
 
 
 %table
-  - dh.linkage_graph.get_node(model).connected_model_associations.each do |association, target|
+  - dh.graph.associations_for(model).each do |association, target|
     - next unless ccan? :read, target
     - next if query_generator_session.uses_model?(target)
     = render :partial => wizard_file(2, "association_row"), :locals => {:model => model, :association => association, :end_point => target}
