--- a/app/views/query_generator/generated_queries/wizard/step_1/_content.html.haml
+++ b/app/views/query_generator/generated_queries/wizard/step_1/_content.html.haml
@@ -13,5 +13,5 @@
       %tr{:class => cycle("odd", "even")}
         %td= radio_button_tag "model", model.to_s, query_generator_session.main_model == model, :id => model_dom_id(model, :prefix => "main")
         %td= label_tag model_dom_id(model, :prefix => "main"), human_model_name(model)
-        %td= dh.linkage_graph.get_node(model).connected_models.map {|m| human_model_name(m) if ccan?(:read, m)}.compact.to_sentence
+        %td= dh.graph.models_connected_to(model).map {|m| human_model_name(m) if ccan?(:read, m)}.compact.to_sentence
         %td= link_to_remote("Preview", :url => preview_model_records_query_generator_generated_queries_path(:model => model.to_s), :method => :get)
