added jquery datatable instead of sql order by (better for long joins, but what about csv export? have to think of something)

--- a/app/views/query_generator/generated_queries/show.html.haml
+++ b/app/views/query_generator/generated_queries/show.html.haml
@@ -3,6 +3,11 @@
     %h2
       = human_model_name(QueryGenerator::GeneratedQuery)
       = @generated_query.name
+      %br
+      = @generated_query
   #query-generator-content
     = render :partial => "output"
   #query-generator-footer
+
+:javascript
+  queryGenerator.createOutputTable("#generated_query_output", #{@generated_query.table_js.to_json})
