--- a/app/views/query_generator/generated_queries/_output.html.haml
+++ b/app/views/query_generator/generated_queries/_output.html.haml
@@ -1,12 +1,10 @@
-%table
+%table#generated_query_output
   %thead
     %tr
-      - @generated_query.table_header_columns.each do |header|
-        %th= header
+      - @generated_query.table_header_columns.each do |column_name, name|
+        %th{:class => column_name}= name
   %tbody
     - @executed_query_rows.each do |row|
       %tr
         - row.each do |column|
           %td= column
-
-= will_paginate @executed_query_rows
