--- a/app/views/query_generator/generated_queries/wizard.html.haml
+++ b/app/views/query_generator/generated_queries/wizard.html.haml
@@ -11,7 +11,5 @@
 :javascript
   queryGenerator.init();
 
-  //The remote function has to be created here as in some system the token might be submitted with every request
-  queryGenerator.callbacks.dragStop = function(event, ui) {
-    #{remote_function(:url => set_model_offset_query_generator_generated_queries_path, :with => "queryGenerator.graph.getModelBoxOffset(ui)")}
-  }
+  queryGenerator.urls.updateOffset = "#{set_model_offset_query_generator_generated_queries_path}";
+  #{set_security_token}
