--- a/app/views/query_generator/generated_queries/index.html.haml
+++ b/app/views/query_generator/generated_queries/index.html.haml
@@ -3,8 +3,8 @@
     %h2= human_model_name(QueryGenerator::GeneratedQuery).pluralize
 
     - if query_generator_session.unfinished_query?
-      = t("query_generator.misc.unfinished_query")
-      = link_to t("query_generator.misc.unfinished_query_link"), query_generator_generated_query_wizard_path(:wizard_step => QueryGenerator::WIZARD_STEPS[query_generator_session.current_step - 1])
+      = render :partial => "query_generator/generated_queries/flash/notice", :locals => {:message => render(:partial => "unfinished_query")}
+
 
   #query-generator-content
     %table
@@ -16,4 +16,4 @@
         = render :partial => "generated_query_row", :collection => @generated_queries, :as => :generated_query
         %tr
           %td{:colspan => 2}
-            = link_to t("query_generator.misc.new_model", :model => human_model_name(QueryGenerator::GeneratedQuery)), new_query_generator_generated_query_path if ccan? :create, QueryGenerator::GeneratedQuery
+            = link_to t("query_generator.misc.new_generated_query", :model => human_model_name(QueryGenerator::GeneratedQuery)), new_query_generator_generated_query_path if ccan? :create, QueryGenerator::GeneratedQuery
