added awesome print, ajax record loading + pagination. TODO: change order by temporarily when user clicked on column headers

--- a/app/views/query_generator/generated_queries/_output.html.haml
+++ b/app/views/query_generator/generated_queries/_output.html.haml
@@ -2,9 +2,5 @@
   %thead
     %tr
       - @generated_query.table_header_columns.each do |column_name, name|
-        %th{:class => column_name}= name
+        %th{:class => column_name, :style => "width: auto"}= name
   %tbody
-    - @executed_query_rows.each do |row|
-      %tr
-        - row.each do |column|
-          %td= column
