--- a/app/stylesheets/query_generator/query_generator.scss
+++ b/app/stylesheets/query_generator/query_generator.scss
@@ -61,6 +61,10 @@ body.query-generator-layout {
     }
   }
 
+  pre {
+    display: inline;
+  }
+
   #query-generator-header {
     padding: 20px;
     border-bottom: 1px solid black;
